--- a/arch/arm/boot/dts/imx6qdl-ts7970.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-ts7970.dtsi
@@ -297,6 +297,12 @@
 	scl-gpios = <&gpio4 12 0>;
 	sda-gpios = <&gpio4 13 0>;
 
+	tsn64: controller@28 {
+		compatible = "ts,tsn64";
+		reg = <0x28>;
+		gpios = <&gpio4 30 0>;
+	};
+
 	hdmi: edid@50 {
 		compatible = "fsl,imx6-hdmi-i2c";
 		reg = <0x50>;
